# LO21

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.383bda6  Doxyfile  HexItem.cpp  HexItem.h  README.md  TuileItem.cpp  TuileItem.h  clang-uml.yml  mainWindow.cpp  resources.qrc
IncludeView/: ChantierWidget.h  ControllerView.h  EchapWidget.h  HexItem.h  PageWidget.h  PiocheWidget.h  PlateauWidget.h  ScorePanel.h  TuileItem.h  WidgetUtilitaire.h  ZoneJeuWidget.h  mainwindow.h
include/: Chantier.h  ControleConsole.h  HexItem.h  Hexagone.h  IStrategieScore.h  JeuController.h  Joueur.h  JoueurFactory.h  PageWidget.h  Partie.h  Plateau.h  PlateauWidget.h  Position.h  RulesFactory.h  Sauvegarde.h  ScoreStrategieFactory.h  ScoreStrategy.h  StrategieScoreCaserne.h  StrategieScoreHabitation.h  StrategieScoreJardin.h  StrategieScoreMarche.h  StrategieScoreTemple.h  Tuile.h  TuileGenerator.h  TuileGeneratorFactory.h  TuileItem.h  VuePlateau.h  couleurs_console.h  fonction.h  mainwindow.h  utils.h
saves/: save_14-11-2025_00-43-52.ratatata  save_14-11-2025_00-45-37.ratatata  save_14-11-2025_01-22-05.ratatata  save_14-11-2025_01-37-21.ratatata  save_14-11-2025_08-00-04.ratatata
src/: Chantier.cpp  ControleConsole.cpp  HexItem.cpp  Hexagone.cpp  JeuController.cpp  Joueur.cpp  JoueurFactory.cpp  PageWidget.cpp  Partie.cpp  Plateau.cpp  PlateauWidget.cpp  RulesFactory.cpp  Sauvegarde.cpp  ScorePanel.cpp  ScoreStrategieFactory.cpp  StrategieScoreCaserne.cpp  StrategieScoreHabitation.cpp  StrategieScoreJardin.cpp  StrategieScoreMarche.cpp  StrategieScoreTemple.cpp  Tuile.cpp  TuileGenerator.cpp  TuileGeneratorFactory.cpp  TuileItem.cpp  VuePlateau.cpp  fonction.cpp  main.cpp  mainWindow.cpp
srcView/: ChantierWidget.cpp  ControllerView.cpp  EchapWidget.cpp  HexItem.cpp  PageWidget.cpp  PiocheWidget.cpp  PlateauWidget.cpp  Sauvegarde.cpp  ScorePanel.cpp  TuileItem.cpp  WidgetUtilitaire.cpp  ZoneJeuWidget.cpp  main.cpp  mainWindow.cpp
ui/: mainwindow.ui
uml/: classes.puml
